--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -27,7 +27,7 @@ jobs:
         uses: SonarSource/sonarcloud-github-c-cpp@v1
       - name: Run build-wrapper
         run: |
-              build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} platformio run --environment debug
+              build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} platformio test -e native
       - name: Run sonar-scanner
         env:
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
