--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -3,13 +3,9 @@ on: [push, pull_request]
 jobs:
   test:
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     env:
           BUILD_WRAPPER_OUT_DIR: build_wrapper_output_directory # Directory where build-wrapper output will be placed
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-
     steps:
       - uses: actions/checkout@v1
         with:
